--- a/Module4.ipynb
+++ b/Module4.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNK8M5Ap4dHiv/BFsMB0zx9",
+      "authorship_tag": "ABX9TyOjsuVhp45hxmzkhDItV2ss",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,9 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "#Discounts\n",
+        "\n",
+        "The user inputs a number of packages and this determines the discount and the discounted price of the purchase"
       ]
     },
     {
@@ -82,11 +84,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QB8r5NNu2Pn3",
+        "id": "BBYUBxLV_93W",
         "colab_type": "text"
       },
       "source": [
-        ""
+        "#Shipping Rates\n",
+        "\n",
+        "The user inputs a number of pounds and this determines the shipping costs"
       ]
     },
     {
@@ -94,13 +98,37 @@
       "metadata": {
         "id": "fu_Ac0WW2N_4",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "ceaae3e6-8701-4b56-d9ef-f57a48b00511"
       },
       "source": [
-        ""
+        "x=int(input('How many pounds are you shipping?'))\n",
+        "\n",
+        "if x>=0 and x<=2:\n",
+        "  print('$1.50')\n",
+        "elif x>2 and x<=6:\n",
+        "  print('$3.00')\n",
+        "elif x>6 and x<=10:\n",
+        "  print('$4.00')\n",
+        "elif x>10:\n",
+        "  print('$4.75')\n",
+        "else:\n",
+        "  print('This is an invalid input')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "How many pounds are you shipping?11\n",
+            "$4.75\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
